<resources>
    <string name="app_name">ShareJoy</string>

    <string name="sign_in">Sign In</string>
    <string name="login_text">Please login to your account</string>
    <string name="username">Username</string>
    <string name="passwd">Password</string>
    <string name="hide_passwd_icon">hide_icon_passwd</string>
    <string name="forgot_passwd">Forgot Password</string>
    <string name="or">OR</string>
    <string name="google_icon">Sign in with Google</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="mob_no">Mobile No.</string>
    <string name="title_activity_dshbord">Dshbord</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>