<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comman1.Login"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="186dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/main_logo" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />




    <EditText
        android:id="@+id/UsernameEt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"


        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameEt">


        <EditText
            android:id="@+id/passwdEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:hint="@string/passwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/passwdIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hide_passwd_icon"
            android:padding="10dp"
            android:src="@drawable/hide_passwd" />


    </RelativeLayout>


    <TextView
        android:id="@+id/forgotPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="305dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="Forgot Password ?"
        android:textColor="#922ACB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswd" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="28dp"
        android:text="@string/no_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

    <TextView
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="90dp"
        android:onClick="buttonPopupwindow"
        android:text="@string/sign_up"
        android:textColor="#975DE5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>









