<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comman1.UserResetPasswordActivity">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="186dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/forgot" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="21dp"
        android:text="Reset Password"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/UsernameEt"
        app:layout_constraintEnd_toEndOf="@id/imageView4"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/UsernameEt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameEt">

        <EditText
            android:id="@+id/passwdEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:hint="New Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/passwdIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hide_passwd_icon"
            android:padding="10dp"
            android:src="@drawable/hide_passwd" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <EditText
            android:id="@+id/passwdEet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/conPasswdIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hide_passwd_icon"
            android:padding="10dp"
            android:src="@drawable/hide_passwd" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/sign_in_button"
        android:text="Reset"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>